--- a/R.html
+++ b/R.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maheshwar Nag - Portfolio</title>
+    <title>Reema - Portfolio</title>
     <link rel="stylesheet" href="R.css">
 </head>
 <body>
